# mural-de-fotos-backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  eslint.config.mjs  flake.nix  index.html  package.json  swagger.config.ts  tsconfig.json
prisma/: schema.prisma
prisma/migrations/0000_baseline/: migration.sql
prisma/migrations/20250320163848_first_migration/: migration.sql
prisma/migrations/20250330030748_add_video_suport/: migration.sql
prisma/migrations/20250427015326_/: migration.sql
prisma/migrations/20250427022655_/: migration.sql
prisma/migrations/20251116173224_remove_ai/: migration.sql
prisma/migrations/20251122134929_add_multiple_medias_for_an_post/: migration.sql
prisma/migrations/20251122140611_remove_old_fields/: migration.sql
prisma/migrations/20251123155355_rename_cluster/: migration.sql
src/: app.module.ts  main.ts
src/auths/: auths.controller.ts  auths.module.ts  auths.service.ts
src/auths/dto/: login-auth.dto.ts
src/aws/: aws-startup.service.ts  aws.controller.ts  aws.module.ts  aws.service.ts
src/comments/: comments.controller.ts  comments.module.ts  comments.service.ts
src/labeling/: label-startup.service.ts  label.controller.ts  label.listener.ts  label.module.ts  label.service.ts
src/likes/: likes.controller.ts  likes.module.ts  likes.service.ts
src/notification/: email.listener.ts  email.service.ts
src/posts/: posts.controller.ts  posts.module.ts  posts.processor.ts  posts.service.ts
src/types/: express.d.ts
src/users/: users.controller.ts  users.service.ts
worker/: main.py  pyproject.toml
(+26 files in other folders)
